# robotsimulation

devel/: .catkin  .rosinstall  setup.sh
devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCamera.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  ITBState.h  ITBStates.h  JointCommand.h  ListCameras.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCamera.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIK.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h
devel/include/interface/: AddTwoInts.h  Num.h  (+12 more)
src/interface/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/simulation/: database.config~
src/simulation/body_description/: CMakeLists.txt  model.config  model.config~  package.xml  package.xml~
src/simulation/body_description/launch/: body.rviz  body.rviz~  body_rviz.launch  body_rviz.launch~  robot.launch  robot.launch~  robot.world~
src/simulation/body_description/meshes/: Body.STL  FootL.STL  FootR.STL  HipR.STL  ShankL.STL  thighR.STL
src/simulation/body_description/urdf/: body.gazebo  body.gazebo~  body.xacro  body.xacro~  my.urdf~  my_box.urdf~  robot.sdf~  robot.urdf~  rrbot.gazebo~
(+144 files in other folders)
